--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -17,15 +17,40 @@
         height: 100vh;
         display: grid;
         place-content: center;
-        background-color: #017474;
+        background-color: #171717;
         font-size: 10vmin;
         font-weight: bold;
+      }
+
+      .bg {
+        color: dimgray;
+      }
+
+      .fg {
+        color: tomato;
+      }
+
+      main {
+        font-family: monospace;
+        text-align: center;
+        font-size: 16px;
       }
     </style>
 
     <title>ASCII Generator</title>
   </head>
+
   <body>
-    <span>{{ content }}</span>
+    <main>
+      {% for line in content %} {% for char in line %} {% if char == "#" %}
+      <span class="fg">{{ char }}</span>
+      {% else %}
+      <span class="bg">{{ char }}</span>
+      {% endif %}
+      <span></span>
+      {% endfor %}
+      <br />
+      {% endfor %}
+    </main>
   </body>
 </html>
