--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -17,7 +17,7 @@
         height: 100vh;
         display: grid;
         place-content: center;
-        background-color: #171717;
+        background-color: #202020;
         font-size: 10vmin;
         font-weight: bold;
       }
@@ -42,12 +42,10 @@
 
   <body>
     <main>
-      {% for line in content %} {% for char in line %} {% if char == "#" %}
-      <span class="fg">{{ char }}</span>
-      {% else %}
-      <span class="bg">{{ char }}</span>
-      {% endif %}
-      <span></span>
+      {% for line in content %} {% for char in line %}
+      <span class="{% if char == '#' %} fg {% else %} bg {% endif %}">
+        {{char}}
+      </span>
       {% endfor %}
       <br />
       {% endfor %}
