--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,54 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+{% extends 'main_layout.html' %}
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+{% load static %}
 
-      body {
-        width: 100vw;
-        height: 100vh;
-        display: grid;
-        place-content: center;
-        background-color: #202020;
-        font-size: 10vmin;
-        font-weight: bold;
-      }
+{% block css %}
+	<link rel="stylesheet" href="{% static 'generator/styles.css' %}">
+{% endblock css %}
 
-      .bg {
-        color: dimgray;
-      }
-
-      .fg {
-        color: tomato;
-      }
-
-      main {
-        font-family: monospace;
-        text-align: center;
-        font-size: 16px;
-      }
-    </style>
-
-    <title>ASCII Generator</title>
-  </head>
-
-  <body>
-    <main>
-      {% for line in content %} {% for char in line %}
-      <span class="{% if char == '#' %} fg {% else %} bg {% endif %}">
-        {{char}}
-      </span>
-      {% endfor %}
-      <br />
-      {% endfor %}
-    </main>
-  </body>
-</html>
+{% block content %}
+	{% for line in art %} {% for char in line %}
+		<span class="{% if char == '#' %} fg {% else %} bg {% endif %}">
+			{{char}}
+		</span>
+	{% endfor %}
+		<br />
+	{% endfor %}
+{% endblock content %}
