--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -8,6 +8,7 @@
     {% load static %}
 
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'generator/includes/header.css' %}">
 
 
     {% block css %}{% endblock css %}
