--- a/generator/static/generator/styles.css
+++ b/generator/static/generator/styles.css
@@ -21,6 +21,7 @@
   font-size: 1rem;
   text-align: center;
   color: honeydew;
+  font-weight: bold;
   font-family: sans-serif;
   font-style: italic;
 }
