--- a/static/styles.css
+++ b/static/styles.css
@@ -19,6 +19,41 @@ body {
 main {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: 30vh 0;
+}
+
+form {
+  display: flex;
+  background-color: crimson;
+  width: fit-content;
+  margin: auto;
+  border-radius: 999px;
+  font-size: 28px;
+}
+
+form input {
+  background-color: transparent;
+  border-radius: 999px 0 0 999px;
+  border: none;
+  color: honeydew;
+  font-size: inherit;
+  padding: 0 15px;
+}
+
+input::placeholder {
+  color: #aeaeae;
+}
+
+form button {
+  width: 48px;
+  height: 48px;
   display: grid;
   place-content: center;
+  border-radius: 999px;
+  border: none;
+  font-size: inherit;
+  box-shadow: 0 0 5px black;
 }
