--- a/static/generator/styles.css
+++ b/static/generator/styles.css
@@ -6,6 +6,11 @@
   color: tomato;
 }
 
+.error {
+  /* font-size: 24px; */
+  color: aqua;
+}
+
 .art {
   background-color: #ffffff06;
   border-radius: 7px;
